GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <length>40</length>
    <type>Text</type>
</CustomField>