GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/fields/Error_Location__c.field-meta.xml
<CustomField>
    <fullName>Error_Location__c</fullName>
    <label>Error Location</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>