GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/fields/ExternalReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ExternalReferenceId__c</fullName>
    <label>ExternalReferenceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>