GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/fields/Failure_Code__c.field-meta.xml
<CustomField>
    <fullName>Failure_Code__c</fullName>
    <label>Failure Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>