GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/fields/FailureReason__c.field-meta.xml
<CustomField>
    <fullName>FailureReason__c</fullName>
    <label>FailureReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>