GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/fields/InvocationMethod__c.field-meta.xml
<CustomField>
    <fullName>InvocationMethod__c</fullName>
    <label>InvocationMethod</label>
    <length>50</length>
    <type>Text</type>
</CustomField>