GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/fields/ObjectId__c.field-meta.xml
<CustomField>
    <fullName>ObjectId__c</fullName>
    <label>ObjectId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>