GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/fields/PayerId__c.field-meta.xml
<CustomField>
    <fullName>PayerId__c</fullName>
    <label>PayerId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>