GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/fields/ReplayId__c.field-meta.xml
<CustomField>
    <fullName>ReplayId__c</fullName>
    <label>ReplayId</label>
    <length>155</length>
    <type>Text</type>
</CustomField>