GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/fields/Time_Created__c.field-meta.xml
<CustomField>
    <fullName>Time_Created__c</fullName>
    <formula>TIMEVALUE( CreatedDate ) - 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time</label>
    <type>Time</type>
</CustomField>