GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/fields/Time_in_Milli_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Milli_Seconds__c</fullName>
    <formula>MILLISECOND( TIMEVALUE( CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in Milli Seconds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>