GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/fields/Time_in_Seconds_1__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Seconds_1__c</fullName>
    <formula>SECOND( TIMEVALUE( CreatedDate ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in Seconds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>