GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/listViews/API_CreateIntakeRequest.listView-meta.xml
<ListView>
    <fullName>API_CreateIntakeRequest</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Integration_Name__c</columns>
    <columns>Status__c</columns>
    <columns>ObjectName__c</columns>
    <columns>InvocationMethod__c</columns>
    <columns>Direction__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Name__c</field>
        <operation>contains</operation>
        <value>API_CREATE_INTAKE_REQUEST</value>
    </filters>
    <label>API CREATE INTAKE REQUEST</label>
</ListView>