GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/listViews/API_INTAKE_REQUEST_SERVICE_UPDATE.listView-meta.xml
<ListView>
    <fullName>API_INTAKE_REQUEST_SERVICE_UPDATE</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Name__c</field>
        <operation>contains</operation>
        <value>API_INTAKE_REQUEST_SERVICE_UPDATE</value>
    </filters>
    <label>API INTAKE REQUEST SERVICE UPDATE</label>
</ListView>