GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/listViews/AZURE_BUS_FOLLOWUP_STATUS_UPDATE.listView-meta.xml
<ListView>
    <fullName>AZURE_BUS_FOLLOWUP_STATUS_UPDATE</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Integration_Name__c</columns>
    <columns>Status__c</columns>
    <columns>ObjectName__c</columns>
    <columns>InvocationMethod__c</columns>
    <columns>Direction__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Name__c</field>
        <operation>contains</operation>
        <value>AZURE_BUS_FOLLOWUP_STATUS_UPDATE</value>
    </filters>
    <label>AZURE BUS FOLLOWUP STATUS UPDATE</label>
</ListView>