GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/listViews/Right_Fax_Status_Check.listView-meta.xml
<ListView>
    <fullName>Right_Fax_Status_Check</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Integration_Name__c</columns>
    <columns>InvocationMethod__c</columns>
    <columns>ObjectName__c</columns>
    <columns>ObjectId__c</columns>
    <columns>Status__c</columns>
    <columns>Direction__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Name__c</field>
        <operation>contains</operation>
        <value>API_RIGHTFAX_STATUS_RESPONSE</value>
    </filters>
    <filters>
        <field>Integration_Name__c</field>
        <operation>contains</operation>
        <value>API_RIGHTFAX_STATUS_REQUEST</value>
    </filters>
    <label>Right Fax Status Check</label>
</ListView>