GloablServices/keshavglobal/force-app/main/default/objects/Integration_Log__c/listViews/SEND_DOCUMENTS_TO_CASE360.listView-meta.xml
<ListView>
    <fullName>SEND_DOCUMENTS_TO_CASE360</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Integration_Name__c</columns>
    <columns>Status__c</columns>
    <columns>ObjectName__c</columns>
    <columns>InvocationMethod__c</columns>
    <columns>Direction__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Name__c</field>
        <operation>contains</operation>
        <value>SEND_DOCUMENTS_TO_CASE360</value>
    </filters>
    <label>SEND DOCUMENTS TO CASE360</label>
</ListView>